Feat:changed the time to ms

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
       </div>
       <!-- time  -->
-      <div data-testid="test-user-time" class="current-time-utc">
+      <div data-testid="test-user-time" class="time" style="text-align: center">
         <h5>Current Time</h5>
       </div>
     </article>
