feat:adding a contacts page

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
       </div>
     </article>
 
+    <div>
+      <a href="./contactForm/contactForm.html"
+        ><button style="width: 5vw; height: 3vw">></button></a
+      >
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
