--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <title>bo1atit0</title>
   </head>
   <body>
+    <nav class="nav-container">
+      <a href="./index.html" class="logo">bo<span>1</span>atit<span>0</span></a>
+      <div class="nav-items">
+        <a class="about" href="./aboutMe/aboutMe.html"><h2>About Me</h2></a>
+        <a href="./contactForm/contactForm.html"><button>Contact Me</button></a>
+      </div>
+    </nav>
+
     <article data-testid="test-profile-card" class="card">
       <div class="container-1">
         <!-- image -->
@@ -101,11 +109,11 @@
       </div>
     </article>
 
-    <div>
+    <!-- <div>
       <a href="./contactForm/contactForm.html"
         ><button style="width: 5vw; height: 3vw">></button></a
       >
-    </div>
+    </div> -->
 
     <script src="index.js"></script>
   </body>
