feat:added a contact and about me page

--- a/contactForm/contactForm.html
+++ b/contactForm/contactForm.html
@@ -13,8 +13,8 @@
         >bo<span>1</span>atit<span>0</span></a
       >
       <div class="nav-items">
-        <a class="about" href="./aboutMe/aboutMe.html"><h2>About Me</h2></a>
-        <a href="./contactForm/contactForm.html"><button>Contact Me</button></a>
+        <a class="about" href="../aboutMe/aboutMe.html"><h2>About Me</h2></a>
+        <a href="./contactForm.html"><button>Contact Me</button></a>
       </div>
     </nav>
 
