--- a/aboutMe/aboutMe.html
+++ b/aboutMe/aboutMe.html
@@ -12,8 +12,10 @@
         >bo<span>1</span>atit<span>0</span></a
       >
       <div class="nav-items">
-        <a class="about" href="./aboutMe/aboutMe.html"><h2>About Me</h2></a>
-        <a href="./contactForm/contactForm.html"><button>Contact Me</button></a>
+        <a class="about" href="./aboutMe.html"><h2>About Me</h2></a>
+        <a href="../contactForm/contactForm.html"
+          ><button>Contact Me</button></a
+        >
       </div>
     </nav>
 
