feat:added a contact and about me page

--- a/aboutMe/aboutMe.html
+++ b/aboutMe/aboutMe.html
@@ -21,38 +21,71 @@
 
     <main data-testid="test-about-page">
       <section class="about-me-header"><h1>About Me</h1></section>
+
       <div class="about">
-        <section class="about-me" data-testid="test-about-bio">
-          I’m an aspiring front-end developer passionate about creating clean,
-          responsive, and user-friendly designs. I enjoy experimenting with CSS
-          animations, gradients, and modern UI patterns to bring creativity into
-          my projects. Beyond coding, I’m also a fashion designer, which
-          influences my sense of design and attention to detail.
+        <section data-testid="test-about-bio">
+          <div class="head">
+            <h2 class="">Bio</h2>
+            <div class="about-me clip-path-slant">
+              I’m an aspiring front-end developer passionate about creating
+              clean, responsive, and user-friendly designs. I enjoy
+              experimenting with CSS animations, gradients, and modern UI
+              patterns to bring creativity into my projects. Beyond coding, I’m
+              also a fashion designer, which influences my sense of design and
+              attention to detail.
+            </div>
+          </div>
         </section>
-        <section class="about-me" data-testid="test-about-goals">
-          My main goal in this program is to become confident in building
-          real-world, responsive web applications using HTML, CSS, JavaScript,
-          and React. I also want to strengthen my problem-solving and debugging
-          skills so I can take on freelance projects and eventually land a paid
-          internship.
+
+        <section data-testid="test-about-goals">
+          <div class="head">
+            <h2 class="">Goals</h2>
+            <div class="about-me clip-path-slant">
+              My main goal in this program is to become confident in building
+              real-world, responsive web applications using HTML, CSS,
+              JavaScript, and React. I also want to strengthen my
+              problem-solving and debugging skills so I can take on freelance
+              projects and eventually land a paid internship.
+            </div>
+          </div>
         </section>
-        <section class="about-me" data-testid="test-about-confidence">
-          I sometimes struggle with debugging complex code and fully
-          understanding advanced JavaScript logic. I also find backend related
-          concepts a bit challenging since my main interest lies in frontend
-          development. However, I’m committed to improving through consistent
-          practice and mentorship.
+
+        <section data-testid="test-about-confidence">
+          <div class="head">
+            <h2 class="">Low Confidence</h2>
+            <div class="about-me clip-path-slant">
+              I sometimes struggle with debugging complex code and fully
+              understanding advanced JavaScript logic. I also find backend
+              related concepts a bit challenging since my main interest lies in
+              frontend development. However, I’m committed to improving through
+              consistent practice and mentorship.
+            </div>
+          </div>
         </section>
-        <section class="about-me" data-testid="test-about-future-note">
-          Keep going, even when things feel tough. Remember how far you’ve come,
-          from writing your first line of HTML to understanding frameworks like
-          React. Stay consistent, keep learning, and don’t be afraid to ask for
-          help. You’re building something meaningful, one project at a time.
+
+        <section data-testid="test-about-future-note">
+          <div class="head">
+            <h2 class="">Future Note</h2>
+            <div class="about-me clip-path-slant">
+              Keep going, even when things feel tough. Remember how far you’ve
+              come, from writing your first line of HTML to understanding
+              frameworks like React. Stay consistent, keep learning, and don’t
+              be afraid to ask for help. You’re building something meaningful,
+              one project at a time.
+            </div>
+          </div>
         </section>
-        <section class="about-me" data-testid="test-about-extra">
-          This journey hasn’t been easy, but it’s been rewarding. I’ve learned
-          that progress comes with patience and consistency. I’m proud of how
-          much I’ve grown and excited about where this path will lead next.
+
+        <section data-testid="test-about-extra">
+          <div class="head">
+            <h2 class="">Extra Thoughts</h2>
+            <div class="about-me clip-path-slant">
+              This journey hasn’t been easy, but it’s been rewarding. I’ve
+              learned that progress comes with patience and consistency. I’m
+              proud of how much I’ve grown and excited about where this path
+              will lead next.
+            </div>
+          </div>
         </section>
       </div>
     </main>
